<resources>
   <string name="app_name">eshop</string>
   <string name="title_sign_in">Sign in</string>
   <string name="hint_firstname">First name</string>
   <string name="btn_sign_in">Sign in</string>
   <string name="sign_in_already_have_acc">Already have an account?</string>
   <string name="txt_btn_login">Log in</string>
   <string name="txt_btn_google_sign_in">Sign in with Google</string>
   <string name="txt_btn_apple_sign_in">Sign in with Apple</string>
   <string name="hint_lastname">Last name</string>
   <string name="hint_email">Email</string>
   <string name="sign_in">Sign In</string>
   <string name="login">Login</string>
   <string name="catalog">Catalog</string>
   <string name="hint_password">Password</string>
   <string name="title_login">Welcome back</string>
   <string name="show_or_hide_pass">Show or hide password</string>
   <string name="hint_search_categories">What are you looking for ?</string>
   <string name="btn_category_view_all">View all</string>
   <string name="format_price_us">$ %1$s</string>
   <string name="format_discount">%s% off</string>
   <string name="title_shop_categories">Trade by <font color="#4E55D7">bata</font></string>
   <string name="location">Location</string>
   <string name="title_nav_home">Главная</string>
   <string name="title_nav_fav">Избранное</string>
   <string name="title_nav_cart">Корзина</string>
   <string name="title_nav_messages">Сообщения</string>
   <string name="title_nav_profile">Профиль</string>
   <string name="txt_btn_change_photo">Change photo</string>
   <string name="btn_upload_item">Upload item</string>
   <string name="menu_trade_store">Trade store</string>
   <string name="menu_payment_method">Payment method</string>
   <string name="menu_balance">Balance</string>
   <string name="menu_trade_history">Trade history</string>
   <string name="menu_restore_purchase">Restore Purchase</string>
   <string name="menu_help">Help</string>
   <string name="menu_logout">Log out</string>
   <string name="profile">Profile</string>
   <string name="alert_logout_msg">Are you sure you want to logout?</string>
   <string name="alert_logout_title">Logout account</string>
   <string name="template_username">Username</string>
   <string name="alert_ext_permission_title">Доступ к хранилищу</string>
   <string name="alert_ext_permission_message">Невозможно получить доступ к галерее, в дальнейшем вы сможете поменять свой выбор в настройках приложения.</string>
   <string name="alert_ext_permission_btn">Хорошо</string>
   <string name="color">Color</string>
   <string name="format_details_title">%1$s\n%2$s</string>
   <string name="quantity">Quantity:</string>
   <string name="quantity_one">1</string>
   <string name="quantity_less">-</string>
   <string name="quantity_more">+</string>
   <string name="btn_add_to_cart">ADD TO CART</string>
   <string name="btn_position_number">#2,500</string>
   <string name="desc_add_to_favorites">Add to favorites</string>
   <string name="desc_share">Share</string>
   <string name="format_price_us_with_cents">$ %s,00</string>
   <string name="price_stub">$ XX,XX</string>
   <string name="btn_login">Login</string>
</resources>