<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item
       android:id="@+id/categoriesFragment"
       android:icon="@drawable/ic_nav_home"
       android:title="@string/title_nav_home" />

   <item
       android:id="@+id/favoritesFragment"
       android:icon="@drawable/ic_nav_fav"
       android:title="@string/title_nav_fav" />

   <item
       android:id="@+id/shopCartFragment"
       android:icon="@drawable/ic_nav_shop_cart"
       android:title="@string/title_nav_cart" />

   <item
       android:id="@+id/messagesFragment"
       android:icon="@drawable/ic_nav_messages"
       android:title="@string/title_nav_messages" />

   <item
       android:id="@+id/profileFragment"
       android:icon="@drawable/ic_nav_profile"
       android:title="@string/title_nav_profile" />

</menu>