<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="44dp"
    android:paddingEnd="@dimen/padding_auth">

   <TextView
       style="@style/TextViewStyle.Title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:text="@string/title_sign_in" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/firstNameTextInput"
       style="@style/TextInputStyle"
       android:layout_width="match_parent"
       android:layout_marginTop="60dp"
       android:hint="@string/hint_firstname" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/lastNameTextInput"
       style="@style/TextInputStyle"
       android:layout_width="match_parent"
       android:layout_marginTop="32dp"
       android:hint="@string/hint_lastname" />

   <com.google.android.material.textfield.TextInputEditText
       android:id="@+id/emailTextInput"
       style="@style/TextInputStyle"
       android:layout_width="match_parent"
       android:layout_marginTop="32dp"
       android:hint="@string/hint_email" />

   <Button
       android:id="@+id/btnSignIn"
       style="@style/PrimaryRoundedButton"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="32dp"
       android:fontFamily="@font/mon_bold"
       android:text="@string/btn_sign_in" />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       android:orientation="horizontal">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sign_in_already_have_acc" />

      <TextView
          android:id="@+id/txtBtnLogin"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="2dp"
          android:padding="4dp"
          android:text="@string/txt_btn_login"
          android:textColor="@color/text_primary" />
   </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="42dp"
       android:orientation="vertical">

      <TextView
          android:id="@+id/txtBtnGoogleSignIn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="12dp"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="@string/txt_btn_google_sign_in"
          app:drawableStartCompat="@drawable/ic_google_sign_in" />

      <TextView
          android:id="@+id/txtBtnAppleSignIn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:drawablePadding="8dp"
          android:gravity="center_vertical"
          android:padding="12dp"
          android:text="@string/txt_btn_apple_sign_in"
          app:drawableStartCompat="@drawable/ic_apple_sign_in" />
   </LinearLayout>
</LinearLayout>