<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/host_nav_graph"
    app:startDestination="@id/signInFragment">

   <fragment
       android:id="@+id/signInFragment"
       android:name="com.github.clockworkclyde.eshop.ui.auth.SignInFragment"
       android:label="@string/sign_in"
       tools:layout="@layout/fragment_sign_in" >
      <action
          android:id="@+id/action_signInFragment_to_loginFragment"
          app:destination="@id/loginFragment" />
      <action
          android:id="@+id/action_signInFragment_to_catalogFragment"
          app:destination="@id/catalogFragment" />
   </fragment>

   <fragment
       android:id="@+id/loginFragment"
       android:name="com.github.clockworkclyde.eshop.ui.auth.LoginFragment"
       android:label="@string/login"
       tools:layout="@layout/fragment_login" >
      <action
          android:id="@+id/action_loginFragment_to_catalogFragment"
          app:destination="@id/catalogFragment" />
   </fragment>

   <fragment
       android:id="@+id/catalogFragment"
       android:name="com.github.clockworkclyde.eshop.ui.catalog.ShopCatalogFragment"
       android:label="@string/catalog"
       tools:layout="@layout/fragment_shop_catalog" >
   </fragment>

</navigation>