<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <data>

      <variable
          name="viewModel"
          type="com.github.clockworkclyde.eshop.ui.auth.AuthViewModel" />

   </data>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:paddingStart="44dp"
       android:paddingTop="122dp"
       android:paddingEnd="@dimen/padding_auth">

      <TextView
          style="@style/TextViewStyle.Title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="@string/title_sign_in" />

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/firstNameTextInput"
          style="@style/TextInputStyle"
          android:layout_width="match_parent"
          android:layout_marginTop="60dp"
          android:hint="@string/hint_firstname"
          android:inputType="text"
          android:text="@{viewModel.firstName}" />

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/passwordTextInput"
          style="@style/TextInputStyle"
          android:layout_width="match_parent"
          android:layout_marginTop="32dp"
          android:drawableEnd="@drawable/ic_password_hidden_eye"
          android:hint="@string/hint_password"
          android:inputType="textPassword"
          android:text="@{viewModel.password}" />

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/stub"
          style="@style/TextInputStyle"
          android:layout_width="match_parent"
          android:layout_marginTop="32dp"
          android:visibility="invisible" />

      <Button
          android:id="@+id/btnSignIn"
          style="@style/PrimaryRoundedButton"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:fontFamily="@font/mon_bold"
          android:safeClick="@{viewModel::onLoginAttemptClicked}"
          android:text="@string/btn_sign_in" />

   </LinearLayout>
</layout>