<?xml version="1.0" encoding="utf-8"?>
<layout>

   <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:paddingBottom="@dimen/frag_padding_bottom_double">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

         <androidx.appcompat.widget.Toolbar
             app:navigationIcon="@drawable/ic_arrow_back"
             android:id="@+id/toolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbarTitleTextView"
                style="@style/TextViewStyle.Title.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile" />

         </androidx.appcompat.widget.Toolbar>

         <ImageView
             android:id="@+id/profilePicImgView"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:contentDescription="@null"
             android:src="@drawable/ic_user_photo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbarLayout" />

         <TextView
             android:id="@+id/changePhotoBtn"
             style="@style/TextViewStyle.ExtraSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:padding="4dp"
             android:text="@string/txt_btn_change_photo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/profilePicImgView" />

         <TextView
             android:id="@+id/usernameTxtView"
             style="@style/TextViewStyle.Title.Medium"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:ellipsize="end"
             android:gravity="center"
             android:lines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/changePhotoBtn"
             android:text="@string/template_username" />

         <Button
             android:id="@+id/uploadItemBtn"
             style="@style/PrimaryRoundedButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="42dp"
             android:layout_marginTop="36dp"
             android:layout_marginEnd="42dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="@string/btn_upload_item"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/usernameTxtView" />

         <View
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:background="@drawable/ic_upload_item"
             android:contentDescription="@null"
             android:elevation="5dp"
             app:layout_constraintBottom_toBottomOf="@id/uploadItemBtn"
             app:layout_constraintEnd_toEndOf="@id/centerVertical"
             app:layout_constraintStart_toStartOf="@id/uploadItemBtn"
             app:layout_constraintTop_toTopOf="@id/uploadItemBtn" />

         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/centerVertical"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5" />

         <LinearLayout
             android:id="@+id/menuItemsLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:orientation="vertical"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/uploadItemBtn" />

      </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>
</layout>